Tue Jun 15 19:49:50 BST 2021  Lee Noar  <lee.noar@sky.com>

	* types.h: Add a list of shared memory objects to the global variables.
	* decl-asm.h: As above.
	* shm.{c/h}: Add shared memory implementation.
	* mmap.c(armeabi_mmap): Check fd for shared memory object and store the
	allocation in the shared memory.
	* memory.{c/h}(allocator_munmap_block): New function to unmap a known
	block.
	(allocator_munmap): Check fd for a shared memory object and deref.
	* main.c: Cleanup shared memory objects on program exit.
	* command.c: Dump list of shared memory objects.
	* configure.ac: Bump version to 1.03.
	* Makefile.am: Build shm.c.
	* swihandler.c: Handle SHMOP SWI.
	* armeabisupport.cmhg: Add SHMOP SWI. Add errno style errors that should
	make it easier to map to errno in Unixlib.

Thu Apr 1  17:34:49 BST 2021  Lee Noar  <lee.noar@sky.com>

	* types.h(dynamicarea_block): Store the size of the DA in pages
	rather than the end address.
	Move some type declarations from memory.h to here.
	Define separate objects for each allocator type derived from
	a base type so that each type only holds data relevant to
	itself.
	* swihandler.c: Handle new mmap SWI.
	* armeabisupport.cmhg: Add new mmap SWI and a new error.
	* swi.c(dynamic_area_create): Handle new mmap allocator type.
	Follow change to dynamicarea_block above where the size in pages is stored.
	* swi-asm.{s/h}(get_os_permissions,get_access_permissions): New
	swi veneers for OSMemory 17 & 18.
	* stack.h: Reduce maximum size of stack dynamic area from 512MB to 256MB.
	The former may have been a bit excessive.
	* stack.c: Variable name change size->page_count.
	Use a dedicated data block for the stack abort handler rather than
	piggy backing onto the main abort data block.
	* stack-asm.s: Make use of dedicated data block passed in r12.
	Abort handler can now return an error code that Unixlib can query.
	* mmap.{c/h},mmap-asm.s: mmap SWI implementation for use by Unixlib.